# fileshare

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  DEPLOY.md  OVERVIEW.md  fileshare.service  generate_diagram.py  nginx-fileshare.conf
src/: main.rs
static/: index.html
