[package]
name = "fileshare"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
image = "0.25"
zip = { version = "2", default-features = false, features = ["deflate"] }
sanitize-filename = "0.5"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
